# pango2-rust-experiments

./: .gitmodules  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md
crates/pango2-alpha-cairo-sys/: Cargo.toml  README.md  build.rs
crates/pango2-alpha-cairo-sys/src/: bindings.rs
crates/pango2-alpha-examples/: Cargo.toml
crates/pango2-alpha-examples/src/: buffer_font.rs  custom_font.rs  lib.rs
crates/pango2-alpha-harfbuzz-sys/: Cargo.toml  build.rs
crates/pango2-alpha-harfbuzz-sys/src/: bindings.rs
crates/pango2-alpha-sys/: Cargo.toml  build.rs
crates/pango2-alpha-sys/src/: bindings.rs  wrapper.h
